# scanplot

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  check_file_size.sh  docker-compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_dev.txt  requirements_dev_2.txt  validate_file_size.sh  validate_files_size.sh
.githooks/: README.md  ipynb-fmt.sh
docs/: developer.md  user_manual.md
examples/: api-draft.ipynb  api_new.ipynb  api_old.ipynb  example_mapper_anywidget.ipynb  main.ipynb  pipeline.ipynb  select_markers.ipynb
plot2data/: Hough_tests.ipynb  custom_template_match.ipynb  custom_template_match_V2.ipynb  generate_plots.ipynb  hough_transform.py  multi_template_match.ipynb  pipeline.ipynb  process_template.py  template_match.py  utils.py
src/: setup_logger.py  template_match.py
src/notebooks_dev/: custom_template_match.ipynb  marker_reconstruction.ipynb
src/plot2data/: hough_transform.py  main.ipynb  pipeline.ipynb  process_template.py  sobel_gradients.py
src/plot2data/core/: clustering.py  conv_map_operations.py  convolution_from_stratch.py  hough_transform.py  nms.py  sobel_gradients.py  template_match.py
src/plot2data/notebooks_dev/: pipeline.ipynb
src/plot2data/utils/: conv_map_operations.py  drawing.py  read_image.py
src/scanplot/: __init__.py  logger_settings.py  main.ipynb  pipeline.ipynb  plotting.py  setup_logger.py  types.py
src/scanplot/core/: __init__.py  clustering.py  color_filter.py  conv_map_operations.py  convolution_from_stratch.py  coords_converter.py  corr_map_operations.py  detector.py  hough_transform.py  nms.py  parameters_search.py  preprocess.py  process_template.py  reconstruction.py  scanplot_api.py  sobel_gradients.py  template_match.py
src/scanplot/development_notebooks/: Hough_tests.ipynb  axes_mapping.ipynb  custom_template_match_V2.ipynb  generate_plots.ipynb  plotly_clicks.ipynb
src/scanplot/io/: __init__.py  read_image.py  saving.py
src/scanplot/notebooks_dev/: custom_template_match_V2.ipynb  marker_choosing.ipynb  multi_template_match.ipynb  optimization.ipynb  pipeline.ipynb  pipeline_v0.ipynb
src/scanplot/utils/: clustering.py  convolution_from_stratch.py  drawing.py  read_image.py  sobel_gradients.py  widgets.py
src/scanplot/view/: __init__.py  axes_mapping_widgets.py  canvas_image_lines.js  canvas_simple.js  canvas_widget.py  coords_mapper.py  coords_mapper_widget.py  detector_widget.py  mapper_js_widget.py  marker_selector_widget.py  roi_selector.py  roi_selector_widget.py
tests/: test_coords_converter.py
