[tool.poetry]
name = "scanplot"
version = "0.1.0"
description = "A tool for extracting data from scatter plot images"
authors = ["adusachev <adusachev@yandex.ru>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "1.24.4"
matplotlib = "3.8.2"
ipykernel = "6.29.0"
ipython = "8.24.0"
ipython-genutils = "0.2.0"
ipywidgets = "8.1.1"
kaleido = "0.2.1"
lsnms = "0.4.4"
nbformat = "5.10.4"
numba = "0.57.1"
numba-progress = "1.1.0"
numpy-indexed = "0.3.7"
opencv-python = "4.9.0.80"
pandas = "2.2.2"
pillow = "10.3.0"
pipdeptree = "2.13.2"
plotly = "5.20.0"
python-dotenv = "1.0.1"
scikit-image = "0.22.0"
scikit-learn = "1.4.0"
scipy = "1.12.0"
seaborn = "0.13.1"
tqdm = "4.66.1"
pyswarms = "1.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "6.29.0"
ipython = "8.24.0"
ipython-genutils = "0.2.0"
ipywidgets = "8.1.1"
kaleido = "0.2.1"
lsnms = "0.4.4"
matplotlib = "3.8.2"
nbformat = "5.10.4"
numba = "0.57.1"
numba-progress = "1.1.0"
numpy = "1.24.4"
numpy-indexed = "0.3.7"
opencv-python = "4.9.0.80"
pandas = "2.2.2"
pillow = "10.3.0"
pipdeptree = "2.13.2"
plotly = "5.20.0"
python-dotenv = "1.0.1"
scikit-image = "0.22.0"
scikit-learn = "1.4.0"
scipy = "1.12.0"
seaborn = "0.13.1"
tqdm = "4.66.1"
pyswarms = "1.3.0"
nbstripout = "0.8.0"
pre-commit = "4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
